<resources>
    <string name="app_name">GitHub</string>
    <string-array name="Home_Tabs">
        <item>Repos</item>
        <item>Favor</item>
    </string-array>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="go_to_login">Sign in</string>
    <string name="please_enter_search_keywords">Please enter search keywords</string>
    <string name="introduce">I am %s, welcome you to visit my Home Page!</string>
    <string name="username_not_null">User name cannot be empty</string>
    <string name="password_not_null">Password name cannot be empty</string>
    <string name="search_users">Search users</string>
    <string name="search_repos">Search repos</string>
    <string name="stared">Stared</string>
    <string name="un_stared">UnStared</string>

    <string name="sort">sort</string>
    <string name="stars">stars</string>
    <string name="forks">forks</string>
    <string name="updated">updated</string>
    <string name="last_version_tip">It\'s the latest version</string>
    <string name="followers">followers</string>
    <string name="joined">joined</string>
    <string name="repositories">repositories</string>

    <string name="best_match">Best match</string>
    <string name="most_stars">Most stars</string>
    <string name="fewest_stars">Fewest stars</string>
    <string name="most_forks">Most forks</string>
    <string name="fewest_forks">Fewest forks</string>
    <string name="recently_updated">Recently updated</string>
    <string name="least_recently_updated">Least recently updated</string>

    <string name="most_followers">Most followers</string>
    <string name="fewest_followers">Fewest followers</string>
    <string name="most_recently_joined">Most recently joined</string>
    <string name="least_recently_joined">Least recently joined</string>
    <string name="most_repositories">Most repositories</string>
    <string name="fewest_repositories">Fewest repositories</string>

    <string name="sort_options">Sort options</string>
    <string name="asc">asc</string>
    <string name="desc">desc</string>

    <string name="tips">Tips</string>
    <string name="logout_message">Are you sure to exit?</string>
    <string name="new_version_found">New version found</string>
    <string name="update_message">Do you want to upgrade?</string>
    <string name="cancel">cancel</string>
    <string name="sure">sure</string>
    <string name="empty_data">Empty Data</string>

    <string name="downloading">Downloading</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="trend">Trend</string>
    <string name="setting">Setting</string>
    <string name="open_fps_monitor">Open Fps Monitor</string>
    <string name="logout">Logout</string>
    <string name="retry_load">retry load</string>
    <string name="load_fail">Load Failed</string>

    <string name="options">options</string>
    <string name="save_picture">save picture</string>
    <string name="save_picture_fail">save picture fail</string>
    <string name="save_picture_success">save picture success</string>
    <string name="save_picture_path">save picture success</string>
    <string name="share_picture">share picture</string>
    <string name="browser_open">Browser open</string>
    <string name="copy_link">Copy link</string>
    <string name="share">Share</string>
    <string name="copied_to_pasteboard">Copied to pasteboard</string>
    <string name="open_overlay_tip">Please open the floating window permission first</string>

    <string name="no_browser_clients">There are no browser clients installed.</string>
    <string name="context_not_null_tip">please init context field in LoaderOptions</string>
    <string name="url_not_null_tips">please init url field in LoaderOptions</string>

    <string name="bottom_button_login">Please use the bottom button to login</string>

    <string name="ic_font_email">&#xe607;</string>
    <string name="ic_font_link">&#xe932;</string>
    <string name="ic_font_browser">&#xe606;</string>
    <string name="ic_font_github">&#xe690;</string>
    <string name="ic_font_empty">&#xe639;</string>

    <string-array name="github_glyph_strings">
        <item>M256 70.7c-102.6 0-185.9 83.2-185.9 185.9 0 82.1 53.3 151.8 127.1 176.4 9.3 1.7 12.3-4
            12.3-8.9V389.4c-51.7 11.3-62.5-21.9-62.5-21.9 -8.4-21.5-20.6-27.2-20.6-27.2 -16.9-11.5 1.3-11.3 1.3-11.3
            18.7 1.3 28.5 19.2 28.5 19.2 16.6 28.4 43.5 20.2 54.1 15.4 1.7-12 6.5-20.2 11.8-24.9
            -41.3-4.7-84.7-20.6-84.7-91.9 0-20.3 7.3-36.9 19.2-49.9 -1.9-4.7-8.3-23.6 1.8-49.2 0 0 15.6-5 51.1 19.1
            14.8-4.1 30.7-6.2 46.5-6.3 15.8 0.1 31.7 2.1 46.6 6.3 35.5-24 51.1-19.1 51.1-19.1 10.1 25.6 3.8 44.5 1.8
            49.2 11.9 13 19.1 29.6 19.1 49.9 0 71.4-43.5 87.1-84.9 91.7 6.7 5.8 12.8 17.1 12.8 34.4 0 24.9 0 44.9 0 51 0
            4.9 3 10.7 12.4 8.9 73.8-24.6 127-94.3 127-176.4C441.9 153.9 358.6 70.7 256 70.7z
        </item>
    </string-array>

</resources>
