<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--android:checkableBehavior="single"设置菜单选择效果-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_user"
            android:icon="@mipmap/icon_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/item_about"
            android:icon="@mipmap/icon_about"
            android:title="@string/about" />
        <item
            android:id="@+id/item_trend"
            android:icon="@mipmap/icon_trend"
            android:title="@string/trend" />
        <item
            android:id="@+id/item_setting"
            android:icon="@mipmap/icon_settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/item_logout"
            android:icon="@mipmap/icon_exit"
            android:title="@string/logout" />
    </group>
</menu>